Refactor: Renamed creds domain to accounts domain
